Correct the extension of Palestine and Syria images in pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,8 +92,8 @@ flutter:
     - assets/Lebanon.png
     - assets/france.png
     - assets/Spain.png
-    - assets/Syria.png
-    - assets/Palestine.png
+    - assets/Syria.jpg
+    - assets/Palestine.jpg
     - assets/Tunisia.png
     - assets/Turkey.jpg
     - assets/Russia.png
